--- a/BigProject/Base.lproj/Main.storyboard
+++ b/BigProject/Base.lproj/Main.storyboard
@@ -10,13 +10,13 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BigProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="StudyIt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9lj-sk-mFd">
@@ -68,7 +68,7 @@
         <!--Card View Controller-->
         <scene sceneID="kgJ-OG-gyn">
             <objects>
-                <viewController id="JNI-Kf-1yq" customClass="CardViewController" customModule="BigProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="JNI-Kf-1yq" customClass="CardViewController" customModule="StudyIt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3OJ-d7-ORN"/>
                         <viewControllerLayoutGuide type="bottom" id="Gcs-nw-cWL"/>
@@ -219,7 +219,7 @@
         <!--Card View Controller-->
         <scene sceneID="Jlm-Ll-ihl">
             <objects>
-                <viewController id="kPy-Yv-Bg1" customClass="CardViewController" customModule="BigProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="kPy-Yv-Bg1" customClass="CardViewController" customModule="StudyIt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="CR1-r4-Yry"/>
                         <viewControllerLayoutGuide type="bottom" id="2Vs-9M-I0o"/>
@@ -314,16 +314,16 @@
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="py0-ft-oJU"/>
+                                <exclude reference="7su-fB-7Bb"/>
                                 <exclude reference="Z2j-M7-wMt"/>
                                 <exclude reference="rLX-bV-ig0"/>
-                                <exclude reference="7su-fB-7Bb"/>
-                                <exclude reference="i8Z-bM-6nn"/>
-                                <exclude reference="Sfr-q9-sg7"/>
-                                <exclude reference="RPN-mR-ACT"/>
                                 <exclude reference="1IW-OX-wfT"/>
+                                <exclude reference="RPN-mR-ACT"/>
+                                <exclude reference="Sfr-q9-sg7"/>
+                                <exclude reference="i8Z-bM-6nn"/>
+                                <exclude reference="M8s-gO-pnQ"/>
                                 <exclude reference="gVY-Yv-sm8"/>
                                 <exclude reference="pGq-Mw-qAr"/>
-                                <exclude reference="M8s-gO-pnQ"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -334,16 +334,16 @@
                             </mask>
                             <mask key="constraints">
                                 <include reference="py0-ft-oJU"/>
+                                <include reference="7su-fB-7Bb"/>
                                 <include reference="Z2j-M7-wMt"/>
                                 <include reference="rLX-bV-ig0"/>
-                                <include reference="7su-fB-7Bb"/>
-                                <include reference="i8Z-bM-6nn"/>
-                                <include reference="Sfr-q9-sg7"/>
-                                <include reference="RPN-mR-ACT"/>
                                 <include reference="1IW-OX-wfT"/>
+                                <include reference="RPN-mR-ACT"/>
+                                <include reference="Sfr-q9-sg7"/>
+                                <include reference="i8Z-bM-6nn"/>
+                                <include reference="M8s-gO-pnQ"/>
                                 <include reference="gVY-Yv-sm8"/>
                                 <include reference="pGq-Mw-qAr"/>
-                                <include reference="M8s-gO-pnQ"/>
                             </mask>
                         </variation>
                     </view>
