--- a/BigProject/Main.storyboard
+++ b/BigProject/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -31,14 +31,14 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cBF-4w-Lw6">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cBF-4w-Lw6">
                                 <rect key="frame" x="279" y="157" width="42" height="30"/>
                                 <animations/>
                                 <state key="normal" title="Log In">
                                     <color key="titleColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="byj-de-f7s">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="byj-de-f7s">
                                 <rect key="frame" x="247" y="280" width="107" height="30"/>
                                 <animations/>
                                 <state key="normal" title="Create Account">
@@ -50,8 +50,12 @@
                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="8VZ-Pa-b5g" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="0hA-Sw-MC5"/>
+                            <constraint firstItem="cBF-4w-Lw6" firstAttribute="centerX" secondItem="byj-de-f7s" secondAttribute="centerX" id="Cxz-g3-bDP"/>
+                            <constraint firstItem="byj-de-f7s" firstAttribute="top" secondItem="cBF-4w-Lw6" secondAttribute="bottom" constant="93" id="DTH-4x-vDQ"/>
                             <constraint firstAttribute="trailing" secondItem="8VZ-Pa-b5g" secondAttribute="trailing" id="Ek6-pf-9HQ"/>
+                            <constraint firstItem="cBF-4w-Lw6" firstAttribute="centerX" secondItem="8VZ-Pa-b5g" secondAttribute="centerX" id="G5q-6p-Mom"/>
                             <constraint firstItem="8VZ-Pa-b5g" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="TYK-Af-WdM"/>
+                            <constraint firstItem="cBF-4w-Lw6" firstAttribute="top" secondItem="8VZ-Pa-b5g" secondAttribute="bottom" constant="85" id="ixK-qR-syx"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -174,7 +178,7 @@
                                 <rect key="frame" x="271" y="75" width="60" height="21"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -185,6 +189,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zrZ-eG-laa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="169" y="2487"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="GVF-Z3-3CG">
+            <objects>
+                <viewController id="uuw-aq-EVN" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jd8-Wy-evq"/>
+                        <viewControllerLayoutGuide type="bottom" id="Bo6-NE-i47"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Baw-2Z-Xwj">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Shuffle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="USh-fF-Rx8">
+                                <rect key="frame" x="282" y="91" width="55" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S8U-kd-SD0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="222" y="3287"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="9Hp-kL-6e8">
+            <objects>
+                <viewController id="wCG-gz-6va" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="OHM-aY-dBN"/>
+                        <viewControllerLayoutGuide type="bottom" id="RTh-7c-fer"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ufy-fo-7Zi">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Match" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6qO-DB-qIV">
+                                <rect key="frame" x="228" y="63" width="48" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZbX-0X-ek2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="886" y="3257"/>
         </scene>
         <!--Front View Controller-->
         <scene sceneID="6Yz-uc-hG4">
@@ -212,7 +272,7 @@
                                             <barButtonItem title="Back of Card" id="tSG-Si-iga">
                                                 <connections>
                                                     <action selector="GetTitle:" destination="7MV-HF-4a0" id="5Qm-Xg-lWj"/>
-                                                    <segue destination="upr-Gs-nlf" kind="show" id="aLv-ly-F2l"/>
+                                                    <segue destination="upr-Gs-nlf" kind="show" identifier="FrontToBack" id="aLv-ly-F2l"/>
                                                 </connections>
                                             </barButtonItem>
                                         </leftBarButtonItems>
@@ -293,7 +353,11 @@
                                             </barButtonItem>
                                         </leftBarButtonItems>
                                         <rightBarButtonItems>
-                                            <barButtonItem title="Save" id="bCH-sc-rH2"/>
+                                            <barButtonItem title="Save" id="bCH-sc-rH2">
+                                                <connections>
+                                                    <action selector="Save:" destination="upr-Gs-nlf" id="h0U-Kw-5kx"/>
+                                                </connections>
+                                            </barButtonItem>
                                             <barButtonItem systemItem="camera" id="eZH-dk-hgj">
                                                 <connections>
                                                     <action selector="AddPhoto:" destination="upr-Gs-nlf" id="QsX-pi-00V"/>
@@ -354,7 +418,7 @@
                                 <rect key="frame" x="272" y="74" width="49" height="21"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -382,7 +446,7 @@
                                 <rect key="frame" x="347" y="97" width="26" height="21"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -399,7 +463,7 @@
         <image name="card" width="518" height="318"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cxH-32-LrQ"/>
-        <segue reference="Ife-r6-MRl"/>
+        <segue reference="fzQ-i6-xcR"/>
+        <segue reference="Cri-Zg-FpY"/>
     </inferredMetricsTieBreakers>
 </document>
