--- a/BigProject/Main.storyboard
+++ b/BigProject/Main.storyboard
@@ -391,7 +391,7 @@
                                 <rect key="frame" x="87" y="284" width="99" height="67"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
